# Fuzzec

./: .gitignore  Main.hs  Makefile  fuzzec.cabal
CPP/: Chars.hs
Fuzzer/: Char.hs  Combinators.hs  Core.hs
